kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quizmaker
  template:
    metadata:
      labels:
        app: quizmaker
    spec:
      containers:
        - name: quizmaker
          image: quay.io/jimmykarily/quizmaker:v0.0.4
          ports:
            - containerPort: 8080
          command: ["quizmaker", "-question-pool", "/app/questions.yaml"]
          volumeMounts:
            - name: questions
              mountPath: /app/questions.yaml
              subPath: questions.yaml
      volumes:
        - name: questions
          configMap:
            name: quizmaker-questions
