kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizmaker-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: example.com   # Default domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quizmaker-service
                port:
                  number: 80
  tls:
    - hosts:
        - example.com
      secretName: quizmaker-tls
